# machine-learning-fundamentals

./: .gitignore  README.md  pyproject.toml
notebook/: 1_preprocessing.py  2_classification.py
