[project]
name = "fondamenti-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "Danilo Parisi",email = "danilo.parisi@aitho.it"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.notebook.dependencies]
notebook = "^7.3.3"
